--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 
 body{
-    background-color: antiquewhite;
+    background-color: #C8E4B2;
 }
 .container{
     padding: 10px 10px;
@@ -79,7 +79,7 @@ nav ul li a:hover::after{
     margin-top: 20px;
 }
 .header-text h1 span{
-    color: grey;
+    color: #7EAA92;
 }
 /*----about---*/
 #about{
@@ -106,7 +106,7 @@ nav ul li a:hover::after{
 Sub-title{
     font-size: 60px;
     font-weight: 600;
-    color: grey;
+    color: #7EAA92;
 }
 about{
     font-size: 45px;
@@ -143,7 +143,7 @@ about{
     margin: 10px 0;
 }
   .tab-contents ul li span{
-    color: grey;
+    color: #7EAA92;
     font-size: 14px;
   }
   .tab-contents{
@@ -190,7 +190,7 @@ about{
     display: block;
  }
  .services-list div:hover{
-    background: grey;
+    background: #C8E4B2;
     transform: translateY(-10px);
 
  }
@@ -247,7 +247,7 @@ about{
     text-decoration:  none;
     font-size: 18px;
     line-height: 60px;
-    background: wheat;
+    background: #C8E4B2;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -263,7 +263,7 @@ about{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid burlywood;
+    border: 1px solid #C8E4B2;
     padding: 14px 50px;
     text-decoration: none;
     color: #000;
@@ -271,7 +271,7 @@ about{
 
   }
   .btn:hover{
-    background: burlywood;
+    background: #C8E4B2;
   }
   /*---contact------*/
 .contact-left{
@@ -285,7 +285,7 @@ about{
 
 }
 .contact-left p i{
-  color: burlywood;
+  color: #7EAA92;
   margin-right: 15px;
   font-size: 25px;
 
@@ -297,7 +297,7 @@ about{
   text-decoration: none;
   font-size: 30px;
   margin-right: 15px;
-  color: #ababab;
+  color: #7EAA92;
   display: inline-block;
   transition: transform 0.5s;
 }
@@ -307,7 +307,7 @@ about{
 }
   .btn.btn2{
     display: inline-flexbox;
-    background: burlywood;
+    background: #7EAA92;
 
   }
 .contact-right form{
@@ -317,7 +317,7 @@ form input, form textarea{
   width: 80%;
   border: 0;
   outline: none;
-  background-color: #ababab;
+  background-color: #7EAA92;
   padding: 15px;
   margin: 15px 0;
   color: #000;
@@ -335,9 +335,72 @@ form .btn2{
   width: 100%;
   text-align: center;
   padding: 25px 0;
-  background: burlywood;
+  background: #7EAA92;
   font-weight: 300;
   margin-top: 20px;
 }
 /*------ css for small screen---*/
-@media only
+nav .fas {
+  display: none ;
+}
+@media only screen and (max-width: 600px) {
+  .header-text{
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  .header-text h1{
+    font-size: 30px;
+  }
+  nav .fas {
+    display: block ;
+    font-size: 25px;
+  }
+  nav ul{
+    background: #9ED2BE;
+    position: fixed;
+    top:  0;
+    right: -200px;
+    width: 200px;
+    height: 50vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: 0.5s;
+  }
+  nav ul li{
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fas{
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+
+  .sub-title{
+    font-size: 40px;
+
+  }
+  .about-col-1, .about-col-2{
+    flex-basis: 100%;
+  }
+  .about-col-1{
+    margin-bottom: 30px;
+      
+  }
+  .about-col-2{
+    font-size: 14px;
+  }
+  .tab-links{
+    font-size: 16px;
+    margin-right: 20px;
+  }
+  .contact-left, .contact-right{
+    flex-basis: 100%;
+  }
+  .Copyright{
+    font-size: 14px;
+  }
+
+  
+}
